modified:   deno.json

--- a/a.html
+++ b/a.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/50c925d5df.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://classless.de/classless.css">
     <title>Document</title>
   </head>
   <body>
